# QuantProgram

./: CMakeLists.txt  README.md  item_delegate.cpp  item_delegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  storage.cpp  storage.h  storage_tests.cpp  table_model.cpp  table_model.h
interface/: item_delegate.cpp  item_delegate.h  mainwindow.cpp  mainwindow.ui  table_model.cpp  table_model.h
storage/: storage.cpp
